--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,4 +3,15 @@ import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout>
+  <div class="flex flex-col items-center mt-52 z-50">
+    <h1
+      class="text-light-titles dark:text-dark-titles font-titles text-2xl font-bold text-center"
+    >
+      Luis Enrique Menéndez Figueroa
+    </h1>
+    <h4 class="text-light-texts dark:text-dark-texts font-texts text-lg font-semibold w-96 text-center">
+      Systems and Computer Science Engineer / Full Stack Developer / Front End
+      Focused / UX UI
+    </h4>
+  </div>
 </MainLayout>
